--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clsx": "^2.1.1",
     "intlayer": "^7.2.2",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vite-plugin-svgr": "^4.5.0"
